feat: add browser time to config
